# bestcoverartists

./: .gitignore  manage.py  pyproject.toml
bestcoverartists/: apps.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
bestcoverartists/static/bestcoverartists/css/: _fonts.scss  _variables.scss  base.scss  main.scss
bestcoverartists/templates/: base.html  index.html
